fix: code smells